# GameExercises

CppPlay/: .gitignore  CMakeLists.txt  README.md
CppPlay/res/shaders/colored_triangle/: shader.frag  shader.vert
CppPlay/res/shaders/textured_triangle/: shader.frag  shader.vert
CppPlay/src/: bitmap.cpp  bitmap.h  common.cpp  common.h  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
CppPlay/src/model/: model.cpp  model.h
E01CordialMinuetCopy/: versions.sbt
E01CordialMinuetCopy/android/: AndroidManifest.xml
E01CordialMinuetCopy/core/: proguard-project.txt
E01CordialMinuetCopy/desktop/: proguard-project.txt
E02LearnToLove/: main.lua
E03BraveNewWorld/android/: project.properties
E03BraveNewWorld/android/assets/: naturePack_002.g3db  naturePack_003.g3dj  naturePack_004.g3dj  naturePack_005.g3db  naturePack_005.g3dj  naturePack_006.g3db  naturePack_006.g3dj  naturePack_008.g3db  naturePack_008.g3dj  naturePack_009.g3db  naturePack_009.g3dj  naturePack_011.g3db  naturePack_012.g3db  naturePack_012.g3dj  naturePack_013.g3dj  naturePack_015.g3db  naturePack_015.g3dj  naturePack_016.g3db  naturePack_017.g3db  naturePack_018.g3db  naturePack_019.g3db  naturePack_019.g3dj  (+158 more)
E03BraveNewWorld/desktop/: proguard-project.txt
E03BraveNewWorld/project/: build.scala  plugins.sbt
LibgdxPlay/: .gitignore  versions.sbt
LibgdxPlay/android/: AndroidManifest.xml
LibgdxPlay/core/: proguard-project.txt
LovePlay/: conf.lua
UnityPlay/ProjectSettings/: ProjectSettings.asset
g01_cm_copy/: assets
g01_cm_copy/project/: build.scala  plugins.sbt
(+258 files in other folders)
